--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 name: caj2pdf
 on: push
 jobs:
-  AutoDownloaderProcess:
+  ConvertActions:
     runs-on: windows-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2.3.4
     - name: preload env cmd
       shell: cmd
       run: |
